--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,8 @@
 h2 {
   background: url(http://i.imgur.com/2LEL4n0.png);
   font: Open Sans;
-  width: 100px
-  height:300px;
+}
+#center {
+  text-align: center
+  
 }
